--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 # SESSION_SECRET=your_secret_key
 # PORT=5000
 
-MONGO_URI=mongodb+srv://jainsubha30:<db_password>@todo-cluster.8p7n0.mongodb.net/?retryWrites=true&w=majority&appName=todo-cluster
+MONGO_URI=mongodb+srv://jainsubha30:Jainras23@todo-cluster.8p7n0.mongodb.net/?retryWrites=true&w=majority&appName=todo-cluster
 SESSION_SECRET=your_secret_key
 PORT=10000  # Render dynamically assigns a port
